# mockreal-ge

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run_intent_mining.py  run_pipeline.py
db/: init-mockreal.sql
src/: config.py  main.py
src/approval/: telegram_bot.py  webhook_server.py
src/content/: featured_image.py  generator.py  humanizer.py  image_enricher.py  internal_linker.py  prompts.py  researcher.py  seo.py  wechat_converter.py
src/feedback/: ab_analyzer.py  content_iterator.py  dashboard_export.py  metrics_collector.py
src/ingestors/: __init__.py  google_autocomplete.py  google_news.py  google_search.py  google_trends.py  people_also_ask.py  reddit.py  top_performers.py  youtube.py
src/pipeline/: content_filter.py  intent_clusterer.py  intent_miner.py  normalizer.py  score_adjuster.py  signal_fusion.py  signal_memory.py  topic_expander.py  topic_scorer.py  viral_scorer.py
src/publishers/: base.py  facebook.py  indexing.py  linkedin.py  medium.py  website.py  wechat.py
src/scheduler/: jobs.py
src/storage/: database.py  models.py  r2_client.py
src/utils/: ai_client.py  charts.py  logging.py  rate_limiter.py  screenshot.py  serpapi_client.py
