[project]
name = "mockreal-engine"
version = "1.0.0"
description = "AI content growth engine for mockreal"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "apscheduler>=3.10",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "boto3>=1.35",
    "tenacity>=9.0",
    "python-telegram-bot>=21.7",
    "openai>=1.55",
    "anthropic>=0.39",
    "loguru>=0.7",
    "playwright>=1.58.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
